<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RPG</string>

    <string name="character_choice">Choisissez votre classe </string>
    <string name="no_equipment">N/A</string>

    <string name="character_creation">Création du personnage</string>
    <string name="name">Nom :</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>

    <string name="general">Général</string>
    <string name="life">Vie</string>
    <string name="level">Niveau</string>
    <string name="gold">Or</string>
    <string name="stats">Statistiques</string>
    <string name="strength">Force</string>
    <string name="speed">Vitesse</string>
    <string name="resistance">Résistance</string>
    <string name="accuracy">Précision</string>
    <string name="dexterity">Dextérité</string>
    <string name="agility">Agilité</string>
    <string name="weight">Poids</string>
    <string name="equipment">Equipement</string>
    <string name="head">Tête</string>
    <string name="body">Corps</string>
    <string name="legs">Jambes</string>
    <string name="foot">Pied</string>
    <string name="hand">Main</string>
    <string name="bag">Sac</string>
    <string name="left_hand">Main gauche</string>
    <string name="right_hand">Main droite</string>

    <string name="type_armor">Armure</string>
    <string name="type_weapon">Arme</string>
    <string name="type_material">Materiel</string>
    <string name="type_healing">Soin</string>
    <string name="type_animal">animal</string>
    <string name="type_natural">natural</string>
    <string name="type_metal">metal</string>

    <string name="character_button_fight">Combat</string>
    <string name="character_button_state">État</string>
    <string name="character_button_bag">Sac</string>
    <string name="character_button_store">Boutique</string>

    <string name="no_item">No item</string>
    <string name="error_not_enough_gold">Combattez pour gagner plus d\'or !</string>
    <string name="added_to_bag">" ajouté au sac"</string>
    <string name="store_error_message_title">Vous ne pouvez pas acheter cet objet…</string>
    <string name="no_more_life_error_message_title">Vous êtes mort…</string>

    <string name="fight">Combattre !</string>
    <string name="error_no_more_life">Vous ne pouvez plus combattre !</string>

    <string name="attack">Attaquer</string>
    <string name="open_bag">Ouvrir le sac</string>
    <string name="abandon">Abandonner</string>
    <string name="monster_current_life">Monster life :</string>
    <string name="fighting_instruction">Que voulez vous faire ?</string>

    <string name="attack_missed_exception">L\'attaque a raté…</string>
    <string name="attack_missed" formatted="false">%1$s raté l\'attaque…\n</string>
    <string name="attack_success" formatted="false">%1$s réussi l\'attaque, %2$s %3$d points de dégâts !\n</string>
    <string name="attack_missed_monster">" a"</string>
    <string name="attack_success_monster1">" a"</string>
    <string name="attack_success_monster2">"il vous inflige "</string>
    <string name="attack_missed_character">"Vous avez "</string>
    <string name="attack_success_character1">"Vous avez "</string>
    <string name="attack_success_character2">"vous infligez "</string>
    <string name="attack_surprise" formatted="false">%1$s %2$s et %3$s %4$d points de dégâts.\n</string>
    <string name="attack_surprise_character1">"Vous devancez l'attaque de "</string>
    <string name="attack_surprise_character3">"lui infligez "</string>
    <string name="attack_surprise_monster2">" vous devance "</string>
    <string name="attack_surprise_monster3">" vous inflige "</string>
    <string name="character_victory">Vous avez gagné !</string>
    <string name="monster_cannot_fight">Votre ennemi ne peut plus combattre !</string>
    <string name="use_potion_dialog_title">Vous allez utiliser une potion</string>
    <string name="use_potion_dialog_message">Elle va vous rendre %1$d pts de vie</string>
    <string name="no_item_in_bag_exception">No more item in bag</string>

    <string name="object">Objet</string>
    <string name="life_display">%1$d / %2$d</string>
    <string name="victory_stat_title_normal">Augmenter une caractéristique de 1 point</string>
    <string name="victory_stat_title_strong">Augmenter une caractéristique de 2 points</string>
    <string name="victory_life_title_normal">Augmenter votre vie de 2 points</string>
    <string name="victory_life_title_strong">Augmenter votre vie de 5 points</string>
    <string name="victory_object_title">Objet obtenu</string>
    <string name="victory_life_message">Vie : %1$d -> %2$d</string>
    <string name="victory_object_message">Vous obtenez : %1$s</string>

    <string name="beginner">débutant</string>
    <string name="intermediary">intermédiaire</string>
    <string name="advanced">avancé</string>
    <string name="expert">expert</string>

</resources>
