<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_character_info" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding">

                <TextView
                    style="@style/SubTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/stats"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding">

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/strength" />

                <TextView
                    android:id="@+id/strength"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding">

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/speed" />

                <TextView
                    android:id="@+id/speed"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding">

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/resistance" />

                <TextView
                    android:id="@+id/resistance"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding">

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/accuracy" />

                <TextView
                    android:id="@+id/accuracy"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding">

                <TextView
                    style="@style/SubTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/equipment"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding">

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/head" />

                <TextView
                    android:id="@+id/head"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding">

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/body" />

                <TextView
                    android:id="@+id/body"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding">

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/legs" />

                <TextView
                    android:id="@+id/legs"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding">

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/foot" />

                <TextView
                    android:id="@+id/foot"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding">

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/left_hand" />

                <TextView
                    android:id="@+id/left_hand"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding">

                <TextView
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/right_hand" />

                <TextView
                    android:id="@+id/right_hand"
                    style="@style/BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
