<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/character_title"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="40dp">


        <Button
            android:id="@+id/character_button_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/button_shadow"
            android:text="@string/character_button_fight" />

        <Button
            android:id="@+id/character_button_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/button_shadow"
            android:text="@string/character_button_state" />


        <Button
            android:id="@+id/character_button_bag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/button_shadow"
            android:text="@string/character_button_bag" />

        <Button
            android:id="@+id/character_button_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/button_shadow"
            android:text="@string/character_button_store" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/character_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
