<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:orientation="vertical">
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character_creation"
        android:gravity="center"
        style="@style/TitleText"
        android:layout_margin="5dip"
        android:padding="5dip"/>
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="@dimen/normal_padding">
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:padding="5dip"
            style="@style/SubTitleText"
            android:text="@string/name"
            android:layout_weight="2"/>
        
        <EditText 
            android:id="@+id/create_character_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:inputType="textCapWords"
            android:padding="5dip"
            android:layout_weight="1"/>
     
    </LinearLayout>
    
    <Button 
        android:id="@+id/character_created"
        style="@style/WhiteButton"
        android:layout_width="wrap_content"
        android:padding="@dimen/small_padding"
        android:text="@string/ok"
        android:layout_gravity="center"/>

</LinearLayout>
