<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_character_info" />

    <TextView
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/normal_padding"
        android:layout_margin="@dimen/normal_padding"
        android:text="@string/character_victory" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="@dimen/normal_padding"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/normal_icon_size"
            android:layout_height="@dimen/normal_icon_size"
            android:src="@drawable/coins_primary" />

        <TextView
            android:id="@+id/victory_coins_earned"
            style="@style/SubTitleText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="15"
            android:padding="@dimen/normal_padding"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_potion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="@dimen/normal_padding"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/normal_icon_size"
            android:layout_height="@dimen/normal_icon_size"
            android:src="@drawable/potion_basic" />

        <TextView
            android:id="@+id/victory_potion_earned"
            style="@style/SubTitleText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/healing_potion"
            android:padding="@dimen/normal_padding"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_victory_choices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_weight="1"
        android:layout_margin="@dimen/small_padding"
        android:paddingLeft="@dimen/xxlarge_padding"
        android:paddingRight="@dimen/xxlarge_padding">

        <Button
            android:id="@+id/victory_stat_button"
            style="@style/WhiteButton"
            android:layout_width="match_parent"
            android:padding="@dimen/large_padding"
            android:text="@string/stats"/>
        <Button
            android:id="@+id/victory_life_button"
            style="@style/WhiteButton"
            android:layout_width="match_parent"
            android:padding="@dimen/large_padding"
            android:text="@string/life"/>
        <Button
            android:id="@+id/victory_object_button"
            style="@style/WhiteButton"
            android:layout_width="match_parent"
            android:padding="@dimen/large_padding"
            android:text="@string/object"/>

    </LinearLayout>

    <Button
        android:id="@+id/victory_confirm_button"
        style="@style/WhiteButton"
        android:layout_width="wrap_content"
        android:padding="@dimen/large_padding"
        android:layout_gravity="center"
        android:text="@string/ok"/>
</LinearLayout>