<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_character_info" />

    <LinearLayout
        android:id="@+id/action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/normal_padding">

        <Button
            android:id="@+id/abandon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/abandon" />

        <Button
            android:id="@+id/open_bag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/open_bag" />

        <Button
            android:id="@+id/attack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/attack" />
    </LinearLayout>

    <TextView
        android:layout_below="@+id/toolbar"
        android:id="@+id/monster_life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/normal_padding" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/action_buttons"
        android:layout_below="@id/monster_life"
        android:padding="@dimen/normal_padding">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fight_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/fight_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/fighting_instruction" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
